updated yaml file

--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,13 @@
 # This is a comment.
+network:
+  name: default
+  instance_ip_mode: INSTANCE_IP_MODE
+  instance_tag: TAG_NAME
+  subnetwork_name: SUBNETWORK_NAME
+  session_affinity: true
+  forwarded_ports:
+    - PORT
+    - HOST_PORT:CONTAINER_PORT
+    - PORT/tcp
+    - HOST_PORT:CONTAINER_PORT/udp
+
