--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 # This is a comment.
 network:
-   name: NETWORK_NAME
+   name: us-east1
    instance_ip_mode: 172.23.124.2
    instance_tag: aef-instance
    subnetwork_name: default
